[cleanup] Remove usage of the deprecated Class.newInstance() method
Signed-off-by: Pierre-Charles David <pierre-charles.david@obeo.fr>