@@ -1,5 +1,5 @@
 /******************************************************************************
- * Copyright (c) 2003, 2007 IBM Corporation and others.
+ * Copyright (c) 2003, 2007, 2023 IBM Corporation and others.
  * This program and the accompanying materials are made
  * available under the terms of the Eclipse Public License 2.0
  * which is available at https://www.eclipse.org/legal/epl-2.0/
@@ -13,6 +13,7 @@
 
 package org.eclipse.emf.validation.internal.util;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Map;
 
 import org.eclipse.core.runtime.IStatus;
@@ -211,7 +212,11 @@ public class JavaConstraintParser implements IParameterizedConstraintParser, IXm
 		Object result = constraintImplementationMap.get(constraintClass);
 
 		if (result == null) {
-			result = constraintClass.newInstance();
+			try {
+				result = constraintClass.getDeclaredConstructor().newInstance();
+			} catch (IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
+				throw new InstantiationException(e.getMessage());
+			}
 			constraintImplementationMap.put(constraintClass, result);
 		}
 
